# image-color-service

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  openapi.yaml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pages.yaml  release.yaml
src/: main.rs
src/endpoints/: color.rs  index.rs  mod.rs
src/endpoints/color/: colors.rs  mod.rs  quality.rs  ranged_int.rs
