[package]
name = "image-color-service"
version = "0.1.4"
edition = "2021"
authors = ["Marie Ramlow <me@nycode.dev>"]
license = "MIT"
description = "Small microservice which calculates the most dominant colors in an image."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures = "0.3"
color-thief = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
image = "0.24"
thiserror = "1.0"
