[package]
name = "image-color-service"
version = "0.4.1"
edition = "2021"
authors = ["Marie Ramlow <me@nycode.dev>"]
license = "MIT"
description = "Small microservice which calculates the most dominant colors in an image."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7"
futures = "0.3"
color-thief = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
image = "0.25"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
